# AmIVisible

./: .gitignore  LICENSE  LICENSE.md  README.md  main.py  pyproject.toml  requirements.txt
static/: script.js  style.css
templates/: index.html
